[project]
name = "realty_reflex_hrms"
authors = [
    { name = "Hybrow", email = "info@hybrow.in"}
]
description = "HRMS"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe==16.25.0",
    "geopy"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
